kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: orca-wl-preprod-service
    labels:
        app: orca-wl-preprod
    annotations:
        #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple/Users/sonumalik/Orca/eks/ingress-wl.yaml targets in a load balancer
        alb.ingress.kubernetes.io/healthcheck-path: /
spec:
    type: NodePort
    selector:
        app: orca-wl-preprod
    ports:
        - port: 8080
          targetPort: 8080
