kubernetes/ingress-wl.yaml
# Annotations Reference:  https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-wl-preprod-service
    labels:
        app: wl-preprod-service
    annotations:
        # Ingress Core Settings
        kubernetes.io/ingress.class: 'alb'
        alb.ingress.kubernetes.io/scheme: internet-facing
        # Health Check Settings
        alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
        alb.ingress.kubernetes.io/healthcheck-port: traffic-port
        alb.ingress.kubernetes.io/healthcheck-interval-seconds: '180'
        alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
        alb.ingress.kubernetes.io/success-codes: '200'
        alb.ingress.kubernetes.io/healthy-threshold-count: '2'
        alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
    rules:
        - http:
              paths:
                  - path: /*
                    backend:
                        serviceName: orca-wl-preprod-service
                        servicePort: 8080
